--- a/AllForOne/package.json
+++ b/AllForOne/package.json
@@ -25,7 +25,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "vector-icons": "^0.1.0"
+    "vector-icons": "^0.1.0",
+    "lottie-react-native": "5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
